--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,24 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+body {
+  background-color: #3d3d3d;
   color: white;
 }
 
-.App-intro {
-  font-size: large;
+nav {
+  background-color: #0079d6;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+label {
+  padding-top: 10px;
 }
+
+h1 {
+  padding: 20px 30px;
+}
+
+span {
+  color: black;
+}
+
+.results {
+  padding: 15px 45px;
+  margin-bottom: 15px;
+  background-color: #55b9f0;
+  border-radius: 5px;
+}
+
+.blue {
+  margin-top: 15px;
+}
+
+.green {
+    color: white;
+    background-color: #00c652;
+    margin-bottom: 15px;
+  }
